Bugfix: No left/right margin on mobile devices

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -49,6 +49,7 @@ body
 .container-box
 {
 	@apply container mx-auto;
+	@apply px-4 sm:px-0;
 }
 
 .container-box-stretch
